--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 pandas = "^2.2.2"
 geopandas = "^0.14.3"
+pysal = "^24.1"
+matplotlib = "^3.8.4"
 
 
 [build-system]
